# pd-sqla

./: docker-compose.yaml  main.py  pyproject.toml
data/: clientes.csv
data/raw/: itens_pedido.csv  pedidos.json  produtos.csv
data/staging/: cliente_stg.parquet  itens_pedido_stg.parquet  pedidos_stg.parquet  produtos_stg.parquet
docker/: Dockerfile
schemas/: schemas.py
src/: ingest.py  load.py  transform.py  transform_gold.py
