[project]
name = "pd-sqla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastparquet>=2026.5.0",
    "logging>=0.4.9.6",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
